2014-12-15  Nick Hung  <nick@andestech.com>

	* configure.host: Add libm nds32 machine directory.
	* libm/machine/configure: Regenerated.
	* libm/machine/configure.in: Add nds32 AC_CONFIG.
	* libm/machine/nds32/Makefile.am: New file.
	* libm/machine/nds32/Makefile.in: Generated.
	* libm/machine/nds32/aclocal.m4: Generated.
	* libm/machine/nds32/configure: Generated.
	* libm/machine/nds32/configure.in: New file.
	* libm/machine/nds32/w_sqrt.S: New file.
	* libm/machine/nds32/wf_sqrt.S: New file.

2014-12-15  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/stdlib.h: Include sys/cdefs.h to avoid undefined
	__ASMNAME.

2014-12-12  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* configure.host: or1knd support, OpenRISC without delay slot
	* libc/include/machine/setjmp.h: Add or1knd
	* libc/machine/or1k/setjmp.S: Optional delay slot

2014-12-12  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* libc/machine/or1k/setjmp.S: Remove save/restore of r3-r8

2014-12-11  Jonathan Roelofs  <jonathan@codesourcery.com>
	    Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/stdio.h: Fix type signature of __sfeof and __sferror 
	for C++.

2014-12-11  Yaakov Selkowitz  <yselkowi@redhat.com>

	* libc/include/stdio_ext.h: Rename __fwriteable to __fwritable.
	[!__GNUC__]: Declare real functions for the macros, and make
	the macros conditional on !__cplusplus.
	* libc/stdio/Makefile.am (ELIX_4_SOURCES): Add stdio_ext.c.
	(CHEWOUT_FILES): Add stdio_ext.def.
	* libc/stdio/Makefile.in: Regenerate.
	* libc/stdio/stdio.tex: Include stdio_ext.def.
	* libc/stdio/stdio_ext.c: New file.

2014-12-04  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/stdio_ext.h: Remove excess "inline".

2014-12-10  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/strchrnul.S (vrepmask): Use a call-clobbered
	register.

2014-12-08  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/strrchr.S: New file.
	* libc/machine/aarch64/strrchr-stub.c: New file.